--- a/styles.css
+++ b/styles.css
@@ -113,9 +113,9 @@ margin: 0;
 padding: 0;
 }
 
-a:link, a:visited {
+/* a:link, a:visited {
 color: white;
-}
+} */
 
 #slideshow {
 margin: 0 auto;
