--- a/style.css
+++ b/style.css
@@ -76,6 +76,14 @@ h2 {
     align-items: center;
 }
 
+#livestream {
+    margin: 0 auto;
+    text-align: center;
+    font-weight: 300;
+    line-height: 25px;
+    padding: 100px;
+}
+
 #dash {
     margin: 0 auto;
     text-align: center;
