Add drop zone centered inline

--- a/styles.css
+++ b/styles.css
@@ -131,83 +131,13 @@ footer {
     padding: 150px;
 }
 
-/* Upload Button stypes */
-
-.vjs-record .vjs-device-button.vjs-control {
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 2.25rem;
-    height: auto;
-    width: 100%;
-    max-width: 32rem;
-    border-radius: 9999px;
-    --tw-bg-opacity: 1;
-    background-color: rgb(41 45 52 / var(--tw-bg-opacity));
-    padding: 1rem;
-    transform: translate(-50%,-50%);
-    font-size: inherit;
-  }
-  .vjs-record .vjs-device-button.vjs-control {
-    font-size: 3em;
-    position: absolute;
-    z-index: 2;
-    top: 50%;
-    left: 50%;
-    width: 4em;
-    height: 2.8em;
-    margin-top: -1.8em;
-    margin-left: -2.1em;
-    display: block;
-    cursor: pointer;
-    opacity: 1;
-    transition: all .4s;
-    text-align: center;
-    vertical-align: middle;
-    border-radius: .8em;
-    background-color: #07141e;
-    background-color: #07141eb3;
-    box-shadow: 0 0 1em #ffffff40;
-  }
-  .video-js .vjs-control {
-    position: relative;
-    text-align: center;
-    margin: 0;
-    margin-top: 0px;
-    margin-right: 0px;
-    margin-left: 0px;
-    padding: 0;
-    height: 100%;
-    width: 4em;
-    flex: none;
-  }
-  .video-js button {
-    background: none;
-      background-color: rgba(0, 0, 0, 0);
-    border: none;
-    color: inherit;
-    display: inline-block;
-    font-size: inherit;
-    line-height: inherit;
-    text-transform: none;
-    text-decoration: none;
-    transition: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-  }
-  button, [type="button"], [type="reset"], [type="submit"] {
-    -webkit-appearance: button;
-    background-color: transparent;
-    background-image: none;
-  }
-
   /* Drop Zone */
 
   .drop-zone {
-    max-width: 200px;
-    height: 200px;
+    max-width: 400px;
+    height: 300px;
     padding: 25px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -218,6 +148,7 @@ footer {
     color: #cccccc;
     border: 4px dashed #009578;
     border-radius: 10px;
+    min-width: 400px;
   }
   
   .drop-zone--over {
