--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,15 @@ h2 {
     text-align: center;
     font-weight: 300;
     line-height: 25px;
-    padding: 50px;
+    padding: 0.1rem;
+}
+
+#bulletin {
+    margin: 0 auto;
+    text-align: center;
+    font-weight: 300;
+    line-height: 25px;
+    padding: 0.1rem;
 }
 
 #dash {
