--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,14 @@ h2 {
     padding-left: 30px;
 }
 
+#tributes {
+    margin: 0 auto;
+    text-align: center;
+    font-weight: 300;
+    line-height: 25px;
+    padding: 50px;
+}
+
 #upload {
     margin: 0 auto;
     text-align: center;
