--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,10 @@ h2 {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.after-memorial #directions {
+    display: none;
+}
+
 #text {
     text-align: center;
     padding-left: 30px;
